# toothpick-finder

./: .gitignore  README.md  colmap.py  fid_markers.typ  heic-convert.zsh  main.py  pycolmap_regen.zsh  pyproject.toml  refs.bib  requirements.txt  start_colmap.zsh  technical_breif.typ
ToPrint/: AprilMarkers.typ
colmap_project/: colmap.ini
colmap_project/sparse/: project.ini
src/: colmap.py  detect_toothpick.py
